--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "calendar-convert"
-main = "worker/worker.js"
+main = "_worker.js"
 compatibility_date = "2025-09-02"
 
 # Serve the Vite build output as static assets
